@@ -16,3 +16,5 @@ Bugs fixed
 
 - Measures longer than whole note (like 12/8) are now supported.
 
+- PHP 5.5+ is supported (Generator is now language internal class)
+
